# raytracer

./: .gitignore  CMakeLists.txt  Constants.h  GeometricObject.cpp  Normal.cpp  Normal.hpp  Plane.cpp  Plane.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  README.md  RGBColor.cpp  RGBColor.hpp  Ray.cpp  Ray.hpp  ShadeRec.cpp  ShadeRec.hpp  SingleSphere.cpp  Sphere.cpp  Sphere.hpp  Tracer.cpp  Tracer.hpp  Vector3D.cpp  Vector3D.hpp  ViewPlane.cpp  ViewPlane.hpp  World.cpp  World.hpp  main.cpp
BRDFs/: BRDF.cpp  BRDF.hpp  GlossySpecular.cpp  GlossySpecular.hpp  Lambertian.cpp  Lambertian.hpp  SV_Lambertian.cpp  SV_Lambertian.hpp  readme.md
Cameras/: Camera.cpp  Camera.hpp  Orthographic.cpp  Orthographic.hpp  Pinhole.cpp  Pinhole.hpp  README.md
GeometricObjects/: GeometricObject.cpp  GeometricObject.hpp  Instance.cpp  Instance.hpp  MultipleObjects.cpp  MultipleObjects.hpp  Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  SingleSphere.hpp  Sphere.cpp  Sphere.hpp
GeometricObjects/CompoundObjects/: Compound.cpp  Compound.hpp  Grid.cpp  Grid.hpp  SolidCylinder.cpp  SolidCylinder.hpp
GeometricObjects/PartObjects/: ConvexPartSphere.cpp  ConvexPartSphere.hpp
GeometricObjects/Primitives/: Box.cpp  Box.hpp  Disk.cpp  Disk.hpp  OpenCone.cpp  OpenCone.hpp  OpenCylinder.cpp  OpenCylinder.hpp  Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp
GeometricObjects/Triangles/: FlatMeshTriangle.cpp  FlatMeshTriangle.hpp  MeshTriangle.cpp  MeshTriangle.hpp  SmoothMeshTriangle.cpp  SmoothMeshTriangle.hpp  SmoothTriangle.cpp  SmoothTriangle.hpp  Triangle.cpp  Triangle.hpp
Graphics/: Graphics.cpp  Graphics.hpp  GuiSDL.cpp  GuiSDL.hpp  ImgPNG.cpp  ImgPNG.hpp
Lights/: Ambient.cpp  Ambient.hpp  AmbientOccluder.cpp  AmbientOccluder.hpp  AreaLight.cpp  AreaLight.hpp  Directional.cpp  Directional.hpp  EnvironmentLight.cpp  EnvironmentLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
Materials/: Emissive.cpp  Emissive.hpp  Material.cpp  Material.hpp  Matte.cpp  Matte.hpp  Phong.cpp  Phong.hpp  README.md  SV_Matte.cpp  SV_Matte.hpp
Samplers/: Hammersley.cpp  Hammersley.hpp  Jittered.cpp  Jittered.hpp  MultiJittered.cpp  MultiJittered.hpp  NRooks.cpp  NRooks.hpp  PureRandom.cpp  PureRandom.hpp  README.md  Regular.cpp  Regular.hpp  Sampler.cpp  Sampler.hpp
Scenes/: BuildCh03PageOneImage.cpp  BuildCh16PageOneImage.cpp  BuildFigure03.18.cpp  BuildFigure03.20a.cpp  BuildFigure04.04.cpp  BuildFigure04.08.cpp  BuildFigure05.13.cpp  BuildFigure08.16.cpp  BuildFigure14.21.cpp  BuildFigure18.04.cpp  BuildFigure23.07.cpp  BuildTest.cpp  BuildTmp.cpp  GeometricObjects.cpp
Textures/: Checker3D.cpp  Checker3D.hpp  ConstantColor.cpp  ConstantColor.hpp  Texture.cpp  Texture.hpp
Tracers/: AreaLighting.cpp  AreaLighting.hpp  MultipleObjects.cpp  MultipleObjects.hpp  RayCast.cpp  RayCast.hpp  SingleSphere.cpp  SingleSphere.hpp  Tracer.cpp  Tracer.hpp  Whitted.cpp  Whitted.hpp  readme.md
Utilities/: BBox.cpp  BBox.hpp  Constants.h  Debug.hpp  Image.cpp  Image.hpp  Maths.cpp  Maths.h  Matrix.cpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  Normal.cpp  Normal.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  RGBColor.cpp  RGBColor.hpp  Random.h  Ray.cpp  Ray.hpp  Session.vim  ShadeRec.cpp  ShadeRec.hpp  Vector3D.cpp  Vector3D.hpp  ply.c  ply.h
World/: ViewPlane.cpp  ViewPlane.hpp  World.cpp  World.hpp
